--- a/style/index.css
+++ b/style/index.css
@@ -12,47 +12,37 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --color-primario: #181818;
-    --color-secundario: white;
+    --color-secundario: rgb(250, 244, 244);
   }
 }
 
 /*reset de margin y padding*/
-
-* {
+*, *::after, *::before{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+img{
+  max-width: 100%;
+}
 /*configuracion de la tipografia para toda la web*/
 
 body {
-  display: grid;
-  align-items: center;
-  justify-content: center;
   font-family: var(--tipo-principal);
   color: var(--color-primario);
   background-color: rgb(239, 231, 213);
 }
 
-main {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-}
 /*titulo*/
 .title-destacado{
-  display:block;
   padding: 1em;
   margin: 1rem;
-  display:grid;
-  justify-content: center;
   text-align: center;
   border: 2px solid #593d0a;
-  border-radius: 30%;
+  border-radius: 20%;
   transition: 0.3s ease;
+  color: #593d0a;
 }
 
 .title-destacado:hover{
@@ -61,22 +51,31 @@ main {
 
 }
 
+.button{
+  padding: 1em;
+  margin-left: 1rem;
+  margin-top: 2rem;
+}
+
+
 /*sleider infinito*/
 .slider-container {
+  background-color: #261f1f;
   overflow: hidden;
+  
 }
 
 .slider {
   display: flex;
-  width: 30%;
+  width: 100px;
   height: 200px;
-  animation: slide-animation 5s infinite linear;
+  animation: slide-animation 7s infinite linear;
 }
 
 .slider__card {
   flex: 0 0 100%;
-  border: 1px solid black;
-  margin-right: 1rem;
+  border: 1px solid rgb(245, 245, 245);
+  margin: 1rem;
 }
 
 .slider__card-link {
@@ -100,32 +99,37 @@ main {
 
 /*seccion subscripcion*/
 .subscription {
-  display: grid;
-  align-items: center;
-  padding-left: 33%;
-  background-color: #3b2922;
   border-radius: 30%;
+  background-color: #a18b69;
+  margin: 1rem;
+  padding: 1em;
 }
 
 .subscription__image {
-  background-image: url(/assets/img/www.BancodeImagenesGratuitas.com-Cafe-2.jpg);
+  background-image: url(/assets/img/fondo_cafe.jpg);
   background-size: cover;
-  background-repeat: no-repeat;
-  height: 100px;
+  background-position: 100%;
+  height: 200px;
   width: 200px;
+  text-align: center;
+  border-radius: 20%;
   margin: 1rem;
 }
 
 .subscription__content {
-  width: 50%;
+  padding: 1em;
+  text-align: center;
+  justify-content: center;
 }
 
 .subscription__content--h2 {
+  color: #edcd6c;
   font-size: 1rem;
   font-weight: bold;
 }
 
 .subscription__content--h3 {
+  color: #dba11b;
   font-size: 1rem;
   font-weight: bold;
 }
@@ -138,23 +142,21 @@ main {
 
 /*footer*/
 footer {
-  width: 100%;
-  padding: 1em;
-  margin: 2rem 2rem 2rem;
+  height: 200px;
+  margin: 1rem;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
   background-color: #a18b69;
-  border-radius: 39%;
+  border-radius: 30%;
 }
 
 .icon {
   position: relative;
   width: 80px;
   height: 80px;
-  margin: 20px;
-  border-radius: 50%;
+  border-radius: 60%;
   transition: all 0.8s;
   cursor: pointer;
 }
@@ -170,13 +172,13 @@ footer {
 }
 
 .icon:hover:nth-child(3) {
-  background-color: #f4912e;
-  box-shadow: 0 0 20px #dba11b;
+  background-color: #f4912e8d;
+  box-shadow: 0 0 20px #ca690d95;
 }
 
 .icon:hover:nth-child(4) {
-  background-color: #391d03;
-  box-shadow: 0 0 20px #50250c;
+  background-color: #643104ae;
+  box-shadow: 0 0 20px #883709b0;
 }
 
 .icon i {
