--- a/style/index.css
+++ b/style/index.css
@@ -9,10 +9,11 @@
   --tipo-secundaria: verdana;
 }
 
+
 @media (prefers-color-scheme: dark) {
   :root {
-    --color-primario: #181818;
-    --color-secundario: rgb(250, 244, 244);
+    --color-negro: #181818;
+    --color-blanco: rgb(250, 244, 244);
   }
 }
 
@@ -30,32 +31,10 @@ img{
 
 body {
   font-family: var(--tipo-principal);
-  color: var(--color-primario);
+  color: var(--color-negro);
   background-color: rgb(239, 231, 213);
 }
 
-/*titulo*/
-.title-destacado{
-  padding: 1em;
-  margin: 1rem;
-  text-align: center;
-  border: 2px solid #593d0a;
-  border-radius: 20%;
-  transition: 0.3s ease;
-  color: #593d0a;
-}
-
-.title-destacado:hover{
-  background-color: #3b2922;
-  color: #fff;
-
-}
-
-.button{
-  padding: 1em;
-  margin-left: 1rem;
-  margin-top: 2rem;
-}
 
 
 /*sleider infinito*/
@@ -67,9 +46,9 @@ body {
 
 .slider {
   display: flex;
-  width: 100px;
+  width: 300px;
   height: 200px;
-  animation: slide-animation 7s infinite linear;
+  animation: slide-animation 14s infinite linear;
 }
 
 .slider__card {
@@ -97,8 +76,37 @@ body {
   }
 }
 
+/*titulo de destacado*/
+.title-destacado{
+  padding: 1em;
+  margin: 1rem;
+  text-align: center;
+  border: 2px solid #593d0a;
+  border-radius: 20%;
+  transition:background-color 0.3s ease;
+  color: #593d0a;
+}
+
+.title-destacado:hover{
+  background-color: #3b2922;
+  color: #fff;
+
+}
+
+.button{
+  border-radius: 40%;
+  padding: 1em;
+  margin: 1rem;
+  position: relative;
+  left: 80px;
+
+}
+
+
 /*seccion subscripcion*/
 .subscription {
+  display: flex;
+  flex-direction:column;
   border-radius: 30%;
   background-color: #a18b69;
   margin: 1rem;
@@ -106,18 +114,20 @@ body {
 }
 
 .subscription__image {
-  background-image: url(/assets/img/fondo_cafe.jpg);
+  background-image: url(/assets/img/desktop/fondo_cafe.jpg);
   background-size: cover;
-  background-position: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 11%;
   height: 200px;
-  width: 200px;
-  text-align: center;
-  border-radius: 20%;
-  margin: 1rem;
+  width: 100%;
 }
 
+
 .subscription__content {
+  flex-direction: row;
   padding: 1em;
+  align-items: center;
   text-align: center;
   justify-content: center;
 }
@@ -135,9 +145,13 @@ body {
 }
 
 .subscription__content--p {
-  font-size: 16px;
-  text-align: left;
+  flex-direction: column;
+  font-size: 1rem;
+  justify-content: center;
+  text-align: center;
   line-height: 1.5;
+  padding: 2em;
+  max-width: 100%;
 }
 
 /*footer*/
@@ -147,9 +161,10 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
-  background-color: #a18b69;
+  flex-wrap: wrap-reverse;
+  background-color: #2c261d;
   border-radius: 30%;
+  position: relative;
 }
 
 .icon {
@@ -162,7 +177,7 @@ footer {
 }
 
 .icon:hover {
-  background-color: #decd99;
+  background-color: #cc9f17;
   box-shadow: 0 0 20px #d39d47;
 }
 
@@ -197,4 +212,34 @@ svg circle {
 
 .icon:hover circle {
   stroke-dasharray: 220;
+}
+
+/*grano de cafe*/
+.grano-cafe{
+  margin: 2rem;
+  position: absolute;
+  align-content: center;
+  text-align: center;
+  bottom: 8em;
+  height: 80px;
+  background-color: #cc9f17;
+  border-radius: 3% 69%;
+}
+
+@font-face {
+  font-family: fuente;
+  src: url("/assets/img/font/misc/SweetCherryFree-K7MZo.otf");
+}
+
+.titulo{
+  padding: 1.5em;
+  position: relative;
+  font-family: fuente;
+  letter-spacing:2px;
+}
+
+/*desktop*/
+@media (max-width:700px) {
+   
+  
 }
