--- a/style/index.css
+++ b/style/index.css
@@ -83,7 +83,7 @@ body {
   text-align: center;
   border: 2px solid #593d0a;
   border-radius: 20%;
-  transition:background-color 0.3s ease;
+  transition:all 0.3s ease;
   color: #593d0a;
 }
 
@@ -106,6 +106,7 @@ body {
 /*seccion subscripcion*/
 .subscription {
   display: flex;
+  justify-content: center;
   flex-direction:column;
   border-radius: 30%;
   background-color: #a18b69;
@@ -157,7 +158,6 @@ body {
 /*footer*/
 footer {
   height: 200px;
-  margin: 1rem;
   display: flex;
   align-items: center;
   justify-content: center;
