--- a/style/seccion-2.css
+++ b/style/seccion-2.css
@@ -27,16 +27,17 @@ body {
   color: var(--color-negro);
   background-color: rgb(239, 231, 213);
   width: 100%;
+  height: 100vh;
 }
 
 .container {
   display: grid;
   grid-template-areas:
-    "header"
-    "section" 
+    "header" 
     "article"
-    "foot";
-  
+    "section" 
+    "aside"
+    "foot" ;
   
 }
 
@@ -48,7 +49,7 @@ header {
 
 section {
   grid-area: section;
-  background-color: #d2cdc9;
+  background-color: #3f250f;
   height: 200px;
 }
 
@@ -59,11 +60,17 @@ article {
 
 }
 
+/*comentarios*/
+aside{
+  height: 200px;
+  background-color: rgb(131, 75, 12);
+}
+
+
 /*footer*/
 footer {
   grid-area: foot;
-  position: relative;
-  margin: 1rem;
+  padding: 1em;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -122,11 +129,11 @@ svg circle {
 
 /*grano de cafe*/
 .grano-cafe {
-  margin: 2rem;
+  margin: 1rem;
   position: absolute;
   align-content: center;
   text-align: center;
-  bottom: 8em;
+  bottom: 3em;
   height: 80px;
   background-color: #cc9f17;
   border-radius: 3% 69%;
