--- a/style/seccion-2.css
+++ b/style/seccion-2.css
@@ -44,31 +44,61 @@ body {
 header {
   background-color: #fff;
   grid-area: header;
-  height: 200px;
+
 }
 
 section {
   grid-area: section;
   background-color: #3f250f;
-  height: 200px;
+
 }
 
 article {
   grid-area: article;
   background-color: #2b1c04;
-  height: 200px;
+  
 
 }
 
 /*comentarios*/
 aside{
-  height: 200px;
+  position: relative;
+  top:1rem;
+  bottom: 1rem;
   background-color: rgb(131, 75, 12);
 }
 .comentarios {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+}
+#nuevoComentario {
+  width: 100%;
+  padding: 1em;
+  margin-bottom: 1rem;
+}
+
+.btn-comentarios button {
+  background-color: #cda42a;
+  color: rgb(17, 16, 16);
+  border-radius: 0% 50%;
+  padding: 1em;
+  cursor: pointer;
+  margin: 1rem;
+}
+
+.comentario {
+  margin-bottom: 1rem;
+  padding: 1em;
+  background-color: #f2f2f2;
+  border-radius: 10%;
+}
+
+.close {
+  float: right;
+  background-color: #90490b;
+  color: rgb(240, 231, 231);
+  cursor: pointer;
 }
 
 /*footer*/
@@ -81,6 +111,8 @@ footer {
   flex-wrap: wrap-reverse;
   background-color: #2c261d;
   border-radius: 30%;
+  position: relative;
+  top: 3rem;
   
 }
 
