--- a/style/seccion-2.css
+++ b/style/seccion-2.css
@@ -1,7 +1,7 @@
 /*custom properties*/
 :root {
-  --color-primario: #181818;
-  --color-secundario: white;
+  --color-negro: #181818;
+  --color-blanco: rgb(252, 252, 252);
 
   /*tipografia*/
 
@@ -30,13 +30,16 @@ body {
   height: 100vh;
 }
 
+li{
+  list-style: none;
+}
+
 .container {
   display: grid;
   grid-template-areas:
     "header" 
     "article"
     "section" 
-    "aside"
     "foot" ;
   
 }
@@ -47,28 +50,42 @@ header {
 
 }
 
-section {
-  grid-area: section;
-  background-color: #3f250f;
-
-}
 
 article {
   grid-area: article;
-  background-color: #2b1c04;
+  margin: auto 1rem auto;
+  background-color: #e38c007e;
+  padding: 1em;
+  border-radius: 3%;
   
+}
 
+.img__article{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.parrafo-article{
+  color: var(--color-blanco);
+  font-size: large;
+  padding: 2em;
+  margin: auto;
+  border-radius: 5%;
+  background-color: #b75e11;
 }
 
 /*comentarios*/
-aside{
+section{
+  grid-area: section;
   position: relative;
   top:1rem;
   bottom: 1rem;
   background-color: rgb(131, 75, 12);
   border-radius: 20%;
   padding: 1.5em;
-  margin: 1rem;
+  margin:auto 1rem;
+  height: 333px;
 }
 .comentarios {
   display: flex;
@@ -95,6 +112,7 @@ aside{
   padding: 1em;
   background-color: #f2f2f2;
   border-radius: 10%;
+  background-color: #90490b;
 }
 
 .close {
@@ -108,19 +126,20 @@ aside{
 footer {
   grid-area: foot;
   padding: 1em;
+  height: 222px;
   display: flex;
-  align-items: center;
+  flex-wrap: wrap;
   justify-content: center;
-  flex-wrap: wrap-reverse;
-  background-color: #2c261d;
+  background-color: #2c261d;;
   border-radius: 30%;
   position: relative;
-  top: 3rem;
+  top: 1rem;
   
 }
 
 .icon {
   position: relative;
+  top:5rem;
   width: 80px;
   height: 80px;
   border-radius: 60%;
@@ -149,6 +168,7 @@ footer {
 }
 
 .icon i {
+  place-content: center;
   color: #fff;
   position: absolute;
   top: 50%;
@@ -166,16 +186,13 @@ svg circle {
   stroke-dasharray: 220;
 }
 
-/*grano de cafe*/
+/*grano de cafe imaginario*/
 .grano-cafe {
-  margin: 1rem;
-  position: absolute;
-  align-content: center;
-  text-align: center;
-  bottom: 3em;
+  position:absolute;
+  bottom: 10rem;
   height: 80px;
   background-color: #cc9f17;
-  border-radius: 3% 69%;
+  border-radius: 3% 56%;
 }
 
 @font-face {
@@ -189,3 +206,32 @@ svg circle {
     font-family: fuente;
     letter-spacing:2px;
   }
+
+/*desktop*/
+@media screen and (min-width: 500px){
+  .container {
+    display: grid;
+    grid-template-areas:
+      "header"
+      "article"
+      "section section"
+      "foot foot";
+    grid-template-columns: repeat  1fr;
+    grid-template-rows: auto;
+    gap: 1rem;
+  }
+
+  article {
+    grid-area: article;
+    background-color: #c6ae83;
+  }
+
+  section {
+    grid-area: section;
+
+  }
+
+}
+
+
+
