cambio de imagenes

--- a/style/index.css
+++ b/style/index.css
@@ -148,7 +148,7 @@ li{
   margin: 1rem;
   position: relative;
   left: 80px;
-  background-color: #f7f4ed;
+  background-color: #cda42a;
   border-radius: 3% 50%;
 
 }
