--- a/style/seccion-2.css
+++ b/style/seccion-2.css
@@ -39,10 +39,14 @@ li{
   grid-template-areas:
     "header" 
     "article"
+    "form"
     "section" 
     "foot" ;
-  
-}
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(5,1fr);
+  height: 100vh;
+  justify-items: center; 
+  }
 
 header {
   background-color: #fff;
@@ -53,7 +57,7 @@ header {
 
 article {
   grid-area: article;
-  margin: auto 1rem auto;
+  margin:1rem;
   padding: 1em;
   border-radius: 3%;
   
@@ -72,6 +76,56 @@ article {
   margin: auto;
   border-radius: 5%;
   background-color: #b75e11;
+}
+/*form*/
+.container__form{
+  grid-area: form;
+  background-image: url(/pexels-lisa-fotios-1833306.jpg);
+  background-size: cover;
+  margin:1rem auto;
+  width: 100%;
+}
+form {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+
+
+}
+
+label {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-weight: bold;
+  padding: 1em;
+}
+
+input[type="submit"] {
+  background-color: #cda42a;
+  color: rgb(11, 10, 10);
+  border-radius: 0% 50%;
+  padding: 1em;
+  cursor: pointer;
+  margin: 1rem;
+  width: 30%;
+
+}
+
+input[type="submit"]:hover {
+  opacity: 0.9;
+  padding: 1em;
+}
+
+input {
+  padding: 1em;
+  border-radius: 10%;
+}
+
+input[type="contraseña"] {
+  padding: 1em;
+}
+
+.form__grano{
+  place-content: center;
 }
 
 /*comentarios*/
@@ -230,7 +284,7 @@ svg circle {
   }
 
 /*desktop*/
-@media screen and (min-width: 500px){
+/* @media screen and (min-width: 500px){
   .container {
     display: grid;
     grid-template-areas:
@@ -256,4 +310,4 @@ svg circle {
 }
 
 
-
+ */
