--- a/style/seccion-2.css
+++ b/style/seccion-2.css
@@ -59,15 +59,57 @@ header {
   align-items: center;
   justify-content: space-between;
   padding: 2rem;
+  border-bottom: #682f00 solid ;
 }
 
+.logo{
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+}
 
-.nav-list {
+nav {
+  background-color: rgba(219,183,140,255);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10%;
+  height: 150px;
+  margin: 1rem 1rem 1rem;
+  padding: 1em;
+  width: 100%;
+}
+
+nav ul {
   list-style-type: none;
   display: flex;
-  gap: 1rem;
+  justify-content: center;
+  align-items: center;
 }
 
+nav li {
+  margin-right: 10px;
+}
+
+nav a {
+  border-radius: 40%;
+  background-color:rgba(71,18,4,255);
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 1rem;
+  padding: 1em;
+  transition: background-color 0.3s ease;
+  font-family:monospace;
+  letter-spacing: 0.1rem;
+  
+}
+
+nav a:hover {
+  background-color: #ffffff;
+  color: #181818;
+  border-radius: 40%;
+  padding: 2em;
+}
 
 
 
@@ -127,12 +169,12 @@ input[type="submit"] {
   cursor: pointer;
   margin: 1rem;
   width: 30%;
+  font-size: 1rem;
 
 }
 
 input[type="submit"]:hover {
   opacity: 0.9;
-  padding: 1em;
 }
 
 input {
