--- a/style/index.css
+++ b/style/index.css
@@ -32,6 +32,68 @@ li{
   list-style: none;
 }
 
+ /*nav*/
+
+ header {
+  display: flex;
+  align-items: center;
+  border-bottom: #1f1e1d solid ;
+  margin: 1rem;
+  width: 100%;
+}
+
+.logo{
+  height: 100px;
+  width: 120px;
+  border-radius: 50%;
+  margin:1rem auto;
+}
+
+nav {
+  /* background-color: rgba(219,183,140,255); */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10%;
+  padding: 1em;
+}
+
+nav ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+
+}
+
+nav li {
+  margin-right: 0.5rem;
+}
+
+nav a {
+  border-radius: 40%;
+  background-color:rgba(71,18,4,255);
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 1rem;
+  padding: 1em;
+  transition: background-color 0.3s ease;
+  font-family:monospace;
+  font-family: fuente;
+  
+}
+
+nav a:hover {
+  background-color: #ffffff;
+  color: #181818;
+  border-radius: 40%;
+  border-bottom:rgba(71,18,4,255) solid 4px ;
+  padding: 2em;
+}
+
+
+
 /*sleider infinito*/
 .slider-container {
   background-color: #261f1f;
@@ -57,7 +119,7 @@ li{
   text-decoration: none;
   display: flex;
   flex-wrap: wrap;
-  padding: 1em;
+  padding: 0.7em;
   justify-content: center;
   text-align: center;
 }
@@ -103,12 +165,11 @@ li{
 }
 
 .subscription__image {
-  background-image: url(/assets/img/desktop/fondo_cafe.jpg);
+  background-image: url(/assets/img/desktop/pexels-quark-studio-2506993.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center;
   border-radius: 11%;
-  height: 200px;
+  height: 300px;
   width: 100%;
 }
 
@@ -154,15 +215,14 @@ li{
 }
 
 /*comentarios*/
-.container{
+.container__comentarios{
   position: relative;
   top:1rem;
   bottom: 1rem;
-  background-color: rgb(131, 75, 12);
+  background-color: #a18b69;
   border-radius: 11%;
   padding: 1.5em;
   margin: 1rem ;
-  height: fit-content;
   display: flex;
   justify-content: center;
 }
@@ -188,6 +248,7 @@ li{
   padding: 1em;
   cursor: pointer;
   margin: 1rem;
+  
 }
 
 .comentario {
@@ -312,32 +373,83 @@ svg circle {
 
 /*desktop*/
 
-/* @media screen and (min-width: 500px){
-  .container {
-    grid-template-areas:
-      "header"
-      "article"
-      "section"
-      "aside"
-      "foot";
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
-    gap: 2rem;
+@media screen and (min-width: 800px){
+
+  body{
+    background-color: #643104ae;
+  }
+  /*nav*/
+  header{
+    display: flex;
+    justify-content: center;
+    border-bottom: #ffff solid 3px;
   }
 
-  article {
-    grid-area: article;
-    background-color: #2b1c04;
+  .logo{
+    width: 200px;
+    height: 200px;
+    margin: 1rem 3rem;
   }
-
-  section {
-    grid-area: section;
-    background-color: #39210d;
-  }
-  .subscription__image{
-    height: 300px;
-    background-size: cover;
-  }
-
   
-} */
+  nav li {
+    margin-right: 4rem;
+  }
+
+
+  /*subcripcion*/
+ .slider-container{
+  padding: 1em;
+
+ }
+
+
+  .title-destacado{
+    width: 600px;
+    position: relative;
+    left: 30%;
+    padding: 1em;
+    font-size: 2rem;
+
+}
+.subscription{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.subscription__image{
+  height: 600px;
+  width: 1000px;
+  background-size: cover;
+
+}
+ .subscription__content{
+   background-color: #2c261d;
+   border-radius: 5%;
+   margin-top: 3rem;
+ } 
+ 
+ .subscription__content--p {
+  color: var(--color-blanco);
+  max-width: 500px;
+}
+  
+/*comentarios*/
+.btn-comentarios button {
+  background-color: #cda42a;
+  color: rgb(17, 16, 16);
+  border-radius: 0% 50%;
+  padding: 1em;
+  cursor: pointer;
+  position: relative;
+  left: 100%;
+  
+}
+
+
+/*footer*/
+.icon{
+  margin: 3rem;
+}
+
+}
