--- a/style/seccion-2.css
+++ b/style/seccion-2.css
@@ -62,22 +62,30 @@ header {
   border-bottom: #682f00 solid ;
 }
 
+/* . /*nav*/
+
+ header {
+  display: flex;
+  align-items: center;
+  border-bottom: #1f1e1d solid ;
+  margin: 1rem;
+  width: 100%;
+}
+
 .logo{
   height: 100px;
-  width: 100px;
+  width: 120px;
   border-radius: 50%;
+  margin:1rem auto;
 }
 
 nav {
-  background-color: rgba(219,183,140,255);
+  /* background-color: rgba(219,183,140,255); */
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 10%;
-  height: 150px;
-  margin: 1rem 1rem 1rem;
   padding: 1em;
-  width: 100%;
 }
 
 nav ul {
@@ -85,10 +93,12 @@ nav ul {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+
 }
 
 nav li {
-  margin-right: 10px;
+  margin-right: 0.5rem;
 }
 
 nav a {
@@ -100,7 +110,7 @@ nav a {
   padding: 1em;
   transition: background-color 0.3s ease;
   font-family:monospace;
-  letter-spacing: 0.1rem;
+  font-family: fuente;
   
 }
 
@@ -108,8 +118,10 @@ nav a:hover {
   background-color: #ffffff;
   color: #181818;
   border-radius: 40%;
+  border-bottom:rgba(71,18,4,255) solid 4px ;
   padding: 2em;
 }
+
 
 
 
