--- a/style/index.css
+++ b/style/index.css
@@ -1,7 +1,7 @@
 /*custom properties*/
 :root {
   --color-negro: #181818;
-  --color-blanco:#fff;
+  --color-blanco: #fff;
 
   /*tipografia*/
 
@@ -9,15 +9,16 @@
   --tipo-secundaria: verdana;
 }
 
-
 /*reset de margin y padding*/
-*, *::after, *::before{
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-img{
+img {
   max-width: 100%;
 }
 /*configuracion de la tipografia para toda la web*/
@@ -28,25 +29,26 @@ body {
   background-color: rgb(239, 231, 213);
 }
 
-li{
+li {
   list-style: none;
 }
 
- /*nav*/
+/*nav*/
 
- header {
+header {
   display: flex;
+  justify-content: center;
   align-items: center;
-  border-bottom: #1f1e1d solid ;
+  border-bottom: #1f1e1d solid;
   margin: 1rem;
   width: 100%;
 }
 
-.logo{
+.logo {
   height: 100px;
   width: 120px;
   border-radius: 50%;
-  margin:1rem auto;
+  margin: 1rem auto;
 }
 
 nav {
@@ -64,7 +66,6 @@ nav ul {
   justify-content: center;
   align-items: center;
   width: 100%;
-
 }
 
 nav li {
@@ -73,26 +74,23 @@ nav li {
 
 nav a {
   border-radius: 40%;
-  background-color:rgba(71,18,4,255);
+  background-color: rgba(71, 18, 4, 255);
   color: #ffffff;
   text-decoration: none;
   font-size: 1rem;
   padding: 1em;
   transition: background-color 0.3s ease;
-  font-family:monospace;
+  font-family: monospace;
   font-family: fuente;
-  
 }
 
 nav a:hover {
   background-color: #ffffff;
   color: #181818;
   border-radius: 40%;
-  border-bottom:rgba(71,18,4,255) solid 4px ;
+  border-bottom: rgba(71, 18, 4, 255) solid 4px;
   padding: 2em;
 }
-
-
 
 /*sleider infinito*/
 .slider-container {
@@ -135,29 +133,26 @@ nav a:hover {
 }
 
 /*titulo de destacado*/
-.title-destacado{
+.title-destacado {
   padding: 1em;
   margin: 1rem;
   text-align: center;
   border: 2px solid #593d0a;
   border-radius: 20%;
-  transition:all 0.3s ease;
+  transition: all 0.3s ease;
   color: #593d0a;
 }
 
-.title-destacado:hover{
+.title-destacado:hover {
   background-color: #3b2922;
   color: #fff;
-
 }
-
-
 
 /*seccion subscripcion*/
 .subscription {
   display: flex;
   justify-content: center;
-  flex-direction:column;
+  flex-direction: column;
   border-radius: 30%;
   background-color: #a18b69;
   padding: 1em;
@@ -172,7 +167,6 @@ nav a:hover {
   height: 300px;
   width: 100%;
 }
-
 
 .subscription__content {
   flex-direction: row;
@@ -204,34 +198,32 @@ nav a:hover {
   max-width: 100%;
 }
 
-.button{
+.button {
   padding: 1em;
   margin: 1rem;
   position: relative;
   left: 80px;
   background-color: #cda42a;
   border-radius: 3% 50%;
-
 }
 
 /*comentarios*/
-.container__comentarios{
+.container__comentarios {
   position: relative;
-  top:1rem;
+  top: 1rem;
   bottom: 1rem;
   background-color: #a18b69;
   border-radius: 11%;
   padding: 1.5em;
-  margin: 1rem ;
+  margin: 1rem;
   display: flex;
   justify-content: center;
 }
-.avatar__img{
+.avatar__img {
   background-size: cover;
   height: 50px;
   width: 50px;
   margin: 1rem;
-  
 }
 
 #nuevoComentario {
@@ -248,7 +240,6 @@ nav a:hover {
   padding: 1em;
   cursor: pointer;
   margin: 1rem;
-  
 }
 
 .comentario {
@@ -257,17 +248,15 @@ nav a:hover {
   padding: 0.5em;
   background-color: #f2f2f2;
   border-radius: 5%;
-  margin:1rem;
+  margin: 1rem;
 }
 
-.comentarios-2{
+.comentarios-2 {
   width: 350px;
   display: flex;
   flex-wrap: wrap;
   overflow-wrap: break-word;
   line-height: 2rem;
-  
-
 }
 
 .close {
@@ -275,7 +264,7 @@ nav a:hover {
   flex-wrap: wrap;
   float: right;
   font-size: 1rem;
-  color:var(--color-blanco);
+  color: var(--color-blanco);
   cursor: pointer;
   border-radius: 100%;
   width: 20px;
@@ -283,9 +272,7 @@ nav a:hover {
   position: relative;
   top: 0.3rem;
   background-color: #682f00;
- 
 }
-
 
 /*footer*/
 footer {
@@ -348,7 +335,7 @@ svg circle {
 }
 
 /*titulo grano de cafe imaginario*/
-.grano-cafe{
+.grano-cafe {
   margin: 1rem;
   position: absolute;
   align-content: center;
@@ -364,92 +351,151 @@ svg circle {
   src: url("/assets/img/font/misc/SweetCherryFree-K7MZo.otf");
 }
 
-.titulo{
+.titulo {
   padding: 1.5em;
   position: relative;
   font-family: fuente;
-  letter-spacing:2px;
+  letter-spacing: 2px;
 }
 
 /*desktop*/
 
-@media screen and (min-width: 800px){
-
-  body{
-    background-color: #643104ae;
-  }
+@media screen and (min-width: 800px) {
   /*nav*/
-  header{
+  header {
     display: flex;
     justify-content: center;
     border-bottom: #ffff solid 3px;
   }
 
-  .logo{
+  .logo {
     width: 200px;
     height: 200px;
     margin: 1rem 3rem;
   }
-  
+
   nav li {
     margin-right: 4rem;
   }
 
-
   /*subcripcion*/
- .slider-container{
-  padding: 1em;
-
- }
-
-
-  .title-destacado{
-    width: 600px;
-    position: relative;
-    left: 30%;
+  .slider-container {
     padding: 1em;
-    font-size: 2rem;
+  }
 
-}
-.subscription{
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  .title-destacado {
+    display: flex;
+    justify-content: center;
+  }
+  .subscription {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .subscription__image {
+    height: 600px;
+    width: 1000px;
+    background-size: cover;
+  }
+  .subscription__content {
+    background-color: #2c261d;
+    border-radius: 5%;
+    margin-top: 3rem;
+  }
+
+  .subscription__content--p {
+    color: var(--color-blanco);
+    max-width: 500px;
+  }
+
+  /*comentarios*/
+  .btn-comentarios button {
+    background-color: #cda42a;
+    color: rgb(17, 16, 16);
+    border-radius: 0% 50%;
+    padding: 1em;
+    cursor: pointer;
+    position: relative;
+    left: 100%;
+  }
+
+  /*footer*/
+  .icon {
+    margin-right: 3rem;
+  }
 }
 
-.subscription__image{
-  height: 600px;
-  width: 1000px;
-  background-size: cover;
-
-}
- .subscription__content{
-   background-color: #2c261d;
-   border-radius: 5%;
-   margin-top: 3rem;
- } 
- 
- .subscription__content--p {
-  color: var(--color-blanco);
-  max-width: 500px;
-}
-  
-/*comentarios*/
-.btn-comentarios button {
-  background-color: #cda42a;
-  color: rgb(17, 16, 16);
-  border-radius: 0% 50%;
-  padding: 1em;
-  cursor: pointer;
-  position: relative;
-  left: 100%;
-  
-}
 
 
-/*footer*/
-.icon{
-  margin: 3rem;
-}
 
+
+
+
+@media screen and (min-width: 1300px) {
+
+  body {
+    background-color: #b51212;
+  }
+  nav header {
+    display: flex;
+    justify-content: center;
+    border-bottom: #ffff solid 3px;
+  }
+
+  .logo {
+    width: 200px;
+    height: 200px;
+    margin: 1rem 3rem;
+  }
+
+  nav li {
+    margin-right: 4rem;
+  }
+
+  .slider-container {
+    padding: 1em;
+  }
+
+  .title-destacado {
+    display: flex;
+    justify-content: center;
+  }
+  .subscription {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .subscription__image {
+    height: 600px;
+    width: 1000px;
+    background-size: cover;
+  }
+  .subscription__content {
+    background-color: #2c261d;
+    border-radius: 5%;
+    margin-top: 3rem;
+  }
+
+  .subscription__content--p {
+    color: var(--color-blanco);
+    max-width: 500px;
+  }
+
+  /*comentarios*/
+  .btn-comentarios button {
+    background-color: #cda42a;
+    color: rgb(17, 16, 16);
+    border-radius: 0% 50%;
+    padding: 1em;
+    cursor: pointer;
+    position: relative;
+    left: 100%;
+  }
+
+  /*footer*/
+  .icon {
+    margin-right: 3rem;
+  }
 }
