--- a/style/seccion-2.css
+++ b/style/seccion-2.css
@@ -26,61 +26,44 @@ body {
   font-family: var(--tipo-principal);
   color: var(--color-negro);
   background-color: rgb(239, 231, 213);
-  width: 100%;
   height: 100vh;
 }
 
-li{
+li {
   list-style: none;
 }
 
 .container {
   display: grid;
   grid-template-areas:
-    "header" 
+    "header"
     "article"
     "form"
-    "section" 
-    "foot" ;
+    "comentarios"
+    "foot";
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(5,1fr);
+  grid-template-rows: repeat(5, 1fr);
   height: 100vh;
-  justify-items: center; 
-  }
+}
 
- /*nav*/
+/*nav*/
 
 header {
-  background-color: #fff;
   grid-area: header;
-  height: 200px;
-  width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding: 2rem;
-  border-bottom: #682f00 solid ;
+  border-bottom: #1f1e1d solid;
+  margin: 1rem auto;
+  padding: 1em;
 }
 
-/* . /*nav*/
-
- header {
-  display: flex;
-  align-items: center;
-  border-bottom: #1f1e1d solid ;
-  margin: 1rem;
-  width: 100%;
-}
-
-.logo{
-  height: 100px;
-  width: 120px;
+.logo {
+  height: 90px;
+  width: 100px;
   border-radius: 50%;
-  margin:1rem auto;
 }
 
 nav {
-  /* background-color: rgba(219,183,140,255); */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -94,7 +77,6 @@ nav ul {
   justify-content: center;
   align-items: center;
   width: 100%;
-
 }
 
 nav li {
@@ -103,66 +85,67 @@ nav li {
 
 nav a {
   border-radius: 40%;
-  background-color:rgba(71,18,4,255);
+  background-color: rgba(71, 18, 4, 255);
   color: #ffffff;
   text-decoration: none;
   font-size: 1rem;
   padding: 1em;
   transition: background-color 0.3s ease;
-  font-family:monospace;
+  font-family: monospace;
   font-family: fuente;
-  
 }
 
 nav a:hover {
   background-color: #ffffff;
   color: #181818;
   border-radius: 40%;
-  border-bottom:rgba(71,18,4,255) solid 4px ;
+  border-bottom: rgba(71, 18, 4, 255) solid 4px;
   padding: 2em;
 }
-
-
 
 
 /*article*/
 article {
   grid-area: article;
-  margin:1rem;
+  margin: 1rem;
   padding: 1em;
   border-radius: 3%;
-  
+  margin: 1rem auto;
+  width: 100%;
+  display: grid;
+  place-content: center;
 }
 
-.img__article{
+.img__article {
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 1rem;
 }
 
-.parrafo-article{
+.parrafo-article {
   color: var(--color-blanco);
   font-size: large;
-  padding: 2em;
-  margin: auto;
+  padding: 1em;
+  margin: 1rem auto;
   border-radius: 5%;
   background-color: #2b2928;
 }
 /*form*/
-.container__form{
+.container__form {
   grid-area: form;
-  background-color:transparent;
-  margin:1rem auto;
+  background-color: transparent;
+  margin: 1rem auto;
+  display: grid;
+  place-content: center;
 }
-
 
 form {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   text-align: center;
   width: 100%;
-
 }
 
 label {
@@ -170,7 +153,6 @@ label {
   border-top: #c37d21 solid 5px;
   border-bottom: #c37d21 solid 5px;
   padding: 1em;
-
 }
 
 input[type="submit"] {
@@ -182,7 +164,6 @@ input[type="submit"] {
   margin: 1rem;
   width: 30%;
   font-size: 1rem;
-
 }
 
 input[type="submit"]:hover {
@@ -203,27 +184,25 @@ input[type="checkbox"] {
   border: none;
 }
 
-.border_form-delete{
+.border_form-delete {
   border: none;
 }
 
-
 /*comentarios*/
-section{
-  grid-area: section;
+section {
+  grid-area: comentarios;
   position: relative;
-  top:2rem;
+  top: 2rem;
   background-color: rgb(131, 80, 13);
   border-radius: 20%;
   padding: 1.5em;
-  margin:1rem auto;
+  margin: 1rem auto;
   width: 100%;
 }
-.avatar__img{
+.avatar__img {
   height: 50px;
   width: 50px;
   margin: 1rem;
-  
 }
 
 #nuevoComentario {
@@ -248,17 +227,15 @@ section{
   padding: 0.5em;
   background-color: #f2f2f2;
   border-radius: 5%;
-  margin:1rem;
+  margin: 1rem;
 }
 
-.comentarios-2{
+.comentarios-2 {
   width: 350px;
   display: flex;
   flex-wrap: wrap;
   overflow-wrap: break-word;
   line-height: 2rem;
-  
-
 }
 
 .close {
@@ -266,7 +243,7 @@ section{
   flex-wrap: wrap;
   float: right;
   font-size: 1rem;
-  color:var(--color-blanco);
+  color: var(--color-blanco);
   cursor: pointer;
   border-radius: 100%;
   width: 20px;
@@ -274,7 +251,6 @@ section{
   position: relative;
   top: 0.3rem;
   background-color: #682f00;
- 
 }
 
 /*footer*/
@@ -285,17 +261,16 @@ footer {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  background-color: #2c261d;;
+  background-color: #2c261d;
   border-radius: 30%;
   position: relative;
   top: 1rem;
   width: 100%;
-  
 }
 
 .icon {
   position: relative;
-  top:5rem;
+  top: 5rem;
   width: 80px;
   height: 80px;
   border-radius: 60%;
@@ -344,7 +319,7 @@ svg circle {
 
 /*grano de cafe imaginario*/
 .grano-cafe {
-  position:absolute;
+  position: absolute;
   bottom: 10rem;
   height: 80px;
   background-color: #cc9f17;
@@ -356,62 +331,135 @@ svg circle {
   src: url("/assets/img/font/misc/SweetCherryFree-K7MZo.otf");
 }
 
-.titulo{
-    padding: 1.5em;
-    position: relative;
-    font-family: fuente;
-    letter-spacing:2px;
-  }
+.titulo {
+  padding: 1.5em;
+  position: relative;
+  font-family: fuente;
+  letter-spacing: 2px;
+}
 
 /*desktop*/
-@media screen and (min-width: 600px){
-  .container {  display: grid;
+@media  (min-width: 600px) {
+  .container {
+    display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    gap: 0px 0px;
-    grid-auto-flow: row;
+    grid-template-rows: 0.5fr 1fr 1.5fr 2fr;
     grid-template-areas:
       "header header"
       "article form"
-      "article form"
-      "comentarios footer";
+      "comentarios comentarios"
+      "foot foot";
+    height: 100vh;
   }
-  
-  
-  header { 
+
+  header {
     grid-area: header;
-    width: 100%;
-    height: 300px;
-    
-   }
-   
-  form {
-    justify-self: stretch;
-    align-self: center;
+    display: flex;
+    justify-content: center;
+    border-bottom: #ffff solid 3px;
+  }
+
+  .logo {
+    width: 200px;
+    height: 200px;
+    margin: 1rem 3rem;
+  }
+
+  nav li {
+    margin-right: 4rem;
+  }
+
+  .container__form {
     grid-area: form;
   }
-  
+
   article {
-    justify-self: stretch;
-    align-self: center;
     grid-area: article;
   }
-  
-  .comentarios {
-    justify-self: stretch;
-    align-self: end;
+
+  section {
     grid-area: comentarios;
+    position: relative;
+    bottom: 66%;
   }
-  
-  footer {
-    justify-self: stretch;
-    align-self: end;
-    grid-area: footer;
-  }
-  
 
-
+  /*comentarios*/
+.btn-comentarios button {
+  background-color: #cda42a;
+  color: rgb(17, 16, 16);
+  border-radius: 0% 50%;
+  padding: 1em;
+  cursor: pointer;
+  position: relative;
+  left: 100%;
+  
 }
 
+  footer {
+    grid-area: foot;
+    width: 800px;
+    padding: 2em;
+  }
 
+  .icon {
+    margin-right: 2rem;
+  }
+}
 
+/* 
+@media screen and (max-width: 1300px) {
+  .container {
+    display: grid;
+    grid-template-columns: 50%, 50%;
+    grid-template-rows: 600px 1fr 1.5fr 400px;
+    grid-template-areas:
+      "header header"
+      "article form"
+      "comentarios comentarios"
+      "foot foot";
+    height: 100vh;
+    background-color: #680000;
+  }
+
+  header {
+    grid-area: header;
+    display: flex;
+    justify-content: center;
+    border-bottom: #ffff solid 3px;
+  }
+
+  .logo {
+    width: 200px;
+    height: 200px;
+    margin: 1rem 3rem;
+  }
+
+  nav li {
+    margin-right: 4rem;
+  }
+
+  .container__form {
+    grid-area: form;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+  }
+
+  article {
+    grid-area: article;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  section {
+    grid-area: comentarios;
+    position: relative;
+    bottom: 66%;
+  }
+
+  footer {
+    grid-area: foot;
+  }
+} */
